src/test/resources/example/cocos/valid/validPreStatementName.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl validPreStatementName {
  context boolean BidMessage.isAuctionsSpecific()
  pre: true;
  post: result == true;
}
