src/test/resources/example/cocos/invalid/invalidMethSigName.ocl
import example.CDs.DefaultTypes.*;
import example.CDs.AuctionCD.*;

ocl invalidMethSigName {
  context boolean Person.PersonalMsg()
  pre Test: true;
  post Test: result == List{m in Person.message | !m.isAuctionSpecific()};
}
